Projet/Kubernete/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: matteomaddalena/simple-microservice-example-1-api:latest
          ports:
            - containerPort: 5000
