Projet/Kubernete/quotes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
        - name: quote-container
          image: matteomaddalena/simple-microservice-example-1-quotes:latest
          ports:
            - containerPort: 3000
