Projet/Kubernete/quotes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quote-service
spec:
  selector:
    app: quote
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
