Projet/Kubernete/quotes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-ingress
spec:
  rules:
  - host: oui.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quote-service
            port:
              number: 3000
